// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PassedChecksSection render details when expandedPassSection prop is true 1`] = `
<DocumentFragment>
  <mock-resultsection
    badgecount="3"
    deps="[object Object]"
    outcometype="pass"
    results="[object Object],[object Object],[object Object]"
    sectionheadinglevel="3"
    targetappinfo="[object Object]"
    title="Passed checks"
  />
</DocumentFragment>
`;

exports[`PassedChecksSection renders 1`] = `
<DocumentFragment>
  <mock-collapsibleresultsection
    badgecount="3"
    cardruleresults="[object Object],[object Object],[object Object]"
    containerclassname="result-section"
    containerid="passed-checks-section"
    deps="[object Object]"
    headinglevel="3"
    outcometype="pass"
    title="Passed checks"
  />
</DocumentFragment>
`;

exports[`PassedChecksSection renders when card data is missing 1`] = `
<DocumentFragment>
  <mock-collapsibleresultsection
    badgecount="0"
    cardruleresults=""
    containerclassname="result-section"
    containerid="passed-checks-section"
    deps="[object Object]"
    headinglevel="3"
    outcometype="pass"
    title="Passed checks"
  />
</DocumentFragment>
`;
